# rig-extend

./: Cargo.toml  Makefile  README.md  README.zh.md
rig-bailian/: Cargo.toml  README.md
rig-bailian/examples/: agent_wirh_bailian.rs  bailian_embeddings.rs  bailian_rereank.rs
rig-bailian/src/: client.rs  completion.rs  embedding.rs  lib.rs  rerank.rs  streaming.rs
rig-bailian/src/types/: mod.rs
rig-tei/: Cargo.toml  README.md
rig-tei/examples/: tei_embeddings.rs  tei_rerank.rs
rig-tei/src/: client.rs  embedding.rs  lib.rs  predict.rs  rerank.rs
rig-volcengine/: Cargo.toml  README.md
rig-volcengine/examples/: agent_wirh_volcengine.rs  volcengine_embeddings.rs
rig-volcengine/src/: client.rs  completion.rs  embedding.rs  lib.rs  streaming.rs
rig-volcengine/src/types/: mod.rs
