[workspace]
resolver = "3"
members = ["rig-bailian", "rig-tei","rig-volcengine"]

[workspace.package]
version = "1.0.0"
authors = ["jerrychir <jerrychir@gmail.com>"]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4"
convert_case = "0.8.0"
futures = "0.3.31"
reqwest = { version = "0.12.20", default-features = false }
schemars = "1.0.4"
serde = "1.0.219"
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
thiserror = "2.0.12"
tokio = "1.45.1"
tokio-rusqlite = { version = "0.6.0", default-features = false }
tokio-test = "0.4.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.17.0"
worker = "0.6"
zerocopy = "0.8.26"
rig-core = "0.23.1"
rig-derive = "0.1.7"
