[workspace]
resolver = "3"
members = ["rig-bailian", "rig-tei","rig-volcengine"]

[workspace.package]
version = "0.1.2"
authors = ["jerrychir <jerrychir@gmail.com>"]
edition = "2024"

[profile.release]
lto = true
opt-level = "s"

[workspace.dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
base64 = "0.22.1"
bytes = "1.11.0"
chrono = "0.4"
convert_case = "0.10.0"
futures = "0.3.31"
reqwest = { version = "0.12.24", default-features = false }
schemars = "1.1.0"
serde = "1.0.228"
serde_json = "1.0.145"
serde_path_to_error = "0.1.20"
thiserror = "2.0.17"
tokio = "1.48.0"
tokio-rusqlite = { version = "0.7.0", default-features = false }
tokio-test = "0.4.4"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
uuid = "1.19.0"
worker = "0.7.1"
zerocopy = "0.8.31"
rig-core = "0.25.0"
rig-derive = "0.1.9"
