[package]
name = "rig-bailian"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Rig adapter for BaiLian: integrates the BaiLian AI service with the Rig ecosystem (request/response types, streaming, error handling)."
license = "MIT"
homepage = "https://github.com/ooiai/rig-extend"
documentation = "https://docs.rs/rig-bailian"
keywords = ["rig", "bailian", "ai", "llm", "provider"]
categories = ["science::artificial-intelligence", "api-bindings"]
include = [
    "/src/**",
    "/Cargo.toml",
    "/README*",
    "/LICENSE*",
    "/examples/**",
    "/docs/**",
]



[dependencies]
async-stream = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
rig-core = { workspace = true }
rig-derive = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
reqwest = { workspace = true, features = ["json", "stream"] }

[dev-dependencies]
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
