[package]
name = "rig-tei"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-stream = { workspace = true }
base64 = { workspace = true }
rig-core = { workspace = true }
rig-derive = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
tracing-subscriber = { workspace = true }
