[package]
name = "rig-volcengine"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
description = "Rig adapter for Volcengine: integrates the Volcengine AI service with the Rig ecosystem (request/response types, streaming, error handling)."
license = "MIT"
homepage = "https://github.com/ooiai/rig-extend"
documentation = "https://docs.rs/rig-volcengine"
keywords = ["rig", "volcengine", "llm", "ai", "provider"]
categories = ["api-bindings", "web-programming::http-client"]
include = [
    "/src/**",
    "/Cargo.toml",
    "/README*",
    "/LICENSE*",
    "/examples/**",
    "/docs/**",
]


[dependencies]
async-stream = { workspace = true }
base64 = { workspace = true }
rig-core = { workspace = true }
rig-derive = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
reqwest = { workspace = true, features = ["json", "stream"] }

[dev-dependencies]
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
